@@ -540,9 +540,16 @@ Working version
 - #11879: Bugfix for Ctype.nondep_type
   (Stephen Dolan, review by Gabriel Scherer)
 
+<<<<<<< HEAD
 - #12264, #12289: Fix compact_allocate to avoid a pathological case
   that causes very slow compaction.
   (Damien Doligez, report by Arseniy Alekseyev, review by Sadiq Jaffer)
+||||||| parent of d717aa2a96 (Merge pull request PR#12004 from ccasin/locally-abstract-attrs)
+=======
+- #12004: Don't ignore function attributes on lambdas with locally abstract
+  types.
+  (Chris Casinghino, review by Gabriel Scherer)
+>>>>>>> d717aa2a96 (Merge pull request PR#12004 from ccasin/locally-abstract-attrs)
 
 OCaml 5.0.0 (15 December 2022)
 ------------------------------
